Revert "temp commit, sidebar fixed width and aligned right"
This reverts commit 8bcf42fa67b611ad6aa052b4468520c471b5d328.

--- a/Online-Messaging-App/src/app/home/chatbox/chatbox.component.scss
+++ b/Online-Messaging-App/src/app/home/chatbox/chatbox.component.scss
@@ -148,15 +148,15 @@ mat-label {
 
 app-channel-user-list {
     height: 100%;
-    overflow: hidden;
-    min-width: 3in;
-    float: right;
-    flex-shrink: 0;
+    overflow: auto;
+    width: 20%;
+    float: left;
 }
 
 .container {
     height: 100%;
     float: left;
+    width: 80%;
 }
 
 #messageForm {
